# lighting-experiment

./: .gitignore  Cargo.toml  build.rs  spec.toml  sprites.xcf
src/: ai.rs  ai_info.rs  append.rs  control.rs  control_table.rs  depth.rs  dijkstra_map.rs  direction.rs  door_manager.rs  entity_component_table.rs  entity_id_allocator.rs  frame_env.rs  frontend.rs  grid.rs  grid_slice.rs  id_allocator.rs  input.rs  launch.rs  limits.rs  main.rs  neighbour_count.rs  policy.rs  prototype.rs  search.rs  simple_file.rs  spatial_hash.rs  turn.rs  vec_pool.rs  vector_index.rs
src/content/: action.rs  animation.rs  bob.rs  change_desc.rs  depth.rs  depth_type.rs  door.rs  door_state.rs  door_type.rs  field_ui_offsets.rs  field_ui_sprite.rs  health.rs  health_overlay.rs  light.rs  mod.rs  sprite.rs  sprite_animation.rs  sprite_effect.rs  tile_sprite.rs
src/entity_store/: component_type_set.rs  constants.hbs.rs  entity_vec.rs  macros.hbs.rs  migration.rs  mod.rs  post_change.rs  tests.rs
src/frontend/: frontend.rs  input.rs  mod.rs
src/glutin_frontend/: frontend.rs  input.rs  mod.rs
src/renderer/: common.rs  dimensions.rs  example.rs  field_ui.rs  frame_info.rs  instance_manager.rs  light_manager.rs  mod.rs  render_target.rs  renderer.rs  scale.rs  scroll_offset.rs  sizes.rs  sprite_sheet.rs  template.rs  tile_map.rs  tile_renderer.rs  vision_buffer.rs
src/res/: components.toml  files.rs  input_sprite.rs  mod.rs  paths.rs  spatial_hash.toml
src/spatial_hash/: macros.hbs.rs  mod.rs  tests.rs
src/static_grid/: conversions.rs  mod.rs  static_grid.rs  tests.rs
(+38 files in other folders)
