[package]
name = "lighting-experiment"
version = "0.1.0"
authors = ["Stephen Sherratt <inconstevable@gmail.com>"]

[dependencies]

cgmath = { version = "0.14", features = ["eders"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
enum_primitive = "0.1"

gfx = "0.16"
gfx_window_glutin = "0.16.0"
gfx_device_gl = "0.14.1"
glutin = "0.8.1"
winit = "0.6.4"
gfx_text = "0.17"
genmesh = "0.5"
image = "0.14"

[build-dependencies]

serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
handlebars = "0.26"
