[package]
name = "lighting-experiment"
version = "0.1.0"
authors = ["Stephen Sherratt <inconstevable@gmail.com>"]

[dependencies]

cgmath = { version = "0.14", features = ["eders"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
enum_primitive = "0.1"

gfx = "0.16"
gfx_window_glutin = "0.17"
glutin = "0.9"

[build-dependencies]

serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
handlebars = "0.28"
