[package]
name = "lighting-experiment"
version = "0.1.0"
authors = ["Stephen Sherratt <inconstevable@gmail.com>"]

[dependencies]

cgmath = { version = "0.15", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
enum_primitive = "0.1"
fnv = "1.0"
num = "0.1"
itertools = "0.6"
maplit = "0.1"
handlebars = "0.29"

gfx = "0.16"
gfx_window_glutin = "0.17"
gfx_device_gl = "0.14"
glutin = "0.9"
genmesh = "0.5"
image = "0.15"

direction = "0.1"

entity_store_helper = "0.2.0"

[build-dependencies]
entity_store_code_gen = "0.2.0"
